<resources>
    <string name="version">23.04.2022</string>
    <string name="app_name">JLsmart</string>
    <string name="app_name_with">Johnson App Login</string>
    <string name="app_name_with_login">Johnson App Login</string>
    <string name="lifts">Lifts</string>
    <string name="escalators">Escalators</string>
    <string name="tickets">Breakdowns</string>
    <string name="view_breakdowns">View Breakdowns</string>
    <string name="new_breakdown_entry">New Breakdown Entry</string>
    <string name="err_msg_type_of_stationname">Select the station name</string>
    <string name="err_msg_type_of_jobno">Select the job no</string>
    <string name="err_msg_type_of_faulttype">Select the fault type</string>
    <string name="drp_value">Drop Down</string>

    <string name="font_name_fontawesome">fontawesome</string>
    <string name="font_name_source_sans_pro">SourceSansPro</string>

    <string name="msg.alert_cleared">Alert Cleared</string>
    <string name="msg.no_alert_showing">No Alert Showing</string>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>

    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="title_5">Ugly card</string>
    <string name="title_6">Ugly card</string>
    <string name="title_7">Ugly card</string>
    <string name="title_8">Ugly card</string>
    <string name="title_9">Ugly card</string>
    <string name="title_10">Ugly card</string>
    <string name="text_images">%1$d Images</string>
    <string name="text_button_done">Done</string>
    <string name="text_title_activity_album">Select photos</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="home">首页</string>
    <string name="discover">发现(Fragment+ViewPager嵌套)</string>
    <string name="shop">商店(Fragment嵌套)</string>
    <string name="login">登录</string>
    <string name="system">系统</string>
    <string name="swipe">侧滑返回Sample</string>
    <string name="go_swipe_back">SwipeBackActivity+Fragment</string>
    <string name="go_swipe_back_f">SwipeBackFragment</string>

    <string name="recommend">推荐</string>
    <string name="hot">热门</string>
    <string name="favorite">收藏</string>

    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="pleasecheckyourinternet">Please check your internet connectivity and try again</string>
    <string name="colon1">:</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="chennai_metro_rail_limited_login">CHENNAI METRO RAIL LIMITED LOGIN</string>
    <string name="chennai_metro_rail_limited">CHENNAI METRO RAIL LIMITED</string>
    <string name="breakdown_status">Breakdown Status</string>
    <string name="your_fault_descriptions_here">Your fault descriptions here..</string>
    <string name="services">Services</string>
    <string name="logout">Log out</string>
    <string name="no_service_list">No Services List</string>
    <string name="field_list">Field List</string>
    <string name="no_field_list">No Field List</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="string">String</string>
    <string name="textarea">TextArea</string>
    <string name="number">Number</string>
    <string name="choose">Choose</string>
    <string name="image">image</string>
    <string name="signature">Signature</string>
    <string name="success">Submit</string>
    <string name="sub_group">Sub Group List</string>
    <string name="row_based">Input Form</string>
    <string name="row_dimension">Dimension in MM</string>
    <string name="activitybased">Activity Based</string>
    <string name="jobdetail">Job Details</string>
    <string name="generaldetail">General Details</string>
    <string name="group">Group List</string>
    <string name="activity_list">Activity List</string>
    <string name="info">i</string>
    <string name="s_no">S.No</string>
    <string name="nob">No of bracket</string>
    <string name="dim_x1">Dim X1</string>
    <string name="dim_x2">Dim X2</string>
    <string name="dim_x3">Dim X3</string>
    <string name="dim_x4">Dim X4</string>
    <string name="dim_y1">Dim Y1</string>
    <string name="dim_y2">Dim Y2</string>
    <string name="remarks">Remarks</string>
    <string name="save">SAVE</string>
    <string name="input_value">Input Value</string>
    <string name="input">Input</string>
    <string name="add_row_based_input_form">Add Row Based Input Form</string>
    <string name="search">Search</string>
    <string name="noofpedning">No of Pending </string>
    <string name="noofnew">No of New  </string>
    <string name="leaveappln">Leave Application</string>
    <string name="subordattendance">Subordinate Attendance</string>
    <string name="collectedcheque">Collected Cheque Details</string>
    <string name="lvapno_text">Lvapno</string>
    <string name="empno_text">EMP NO</string>
    <string name="appr_mgr_text">Appr Mgr</string>
    <string name="leave_appl_date_text">Leave Application Date </string>
    <string name="leave_code_text">Leave Code</string>
    <string name="no_of_days_text">No.Of.Days</string>
    <string name="frmdt_text">From Date</string>
    <string name="todat">To Date</string>
    <string name="reason_text">Reason</string>
    <string name="generaldetail_leaveappln">Leave Application</string>
    <string name="generaldetail_subord">Subordinate Attendance</string>
    <string name="crntdate">08-04-2022</string>
    <string name="phone_number">Phone Number</string>


    <style name="table_header" parent="@android:style/TextAppearance.Small">
        <item name="android:fontFamily">@font/sourcesanspro_regular</item>
        <item name="android:layout_gravity">center_vertical</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:gravity">center_vertical</item>
        <item name="android:textSize">@dimen/_10sp</item>
        <item name="android:background">@drawable/rectangular_corner_bg_lightgreyy</item>
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">@dimen/_40dp</item>
    </style>

    <style name="table_row_item" parent="@android:style/TextAppearance.Small">
        <item name="android:fontFamily">@font/sourcesanspro_regular</item>
        <item name="android:layout_gravity">center_vertical</item>
        <item name="android:gravity">center_vertical</item>
        <item name="android:textSize">@dimen/_10sp</item>
        <item name="android:background">@drawable/rectangular_corner_bg_lightgrey</item>
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">@dimen/_45dp</item>
    </style>

    <string name="title_activity_full_screen_image">FullScreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
